--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -19,18 +19,19 @@
 <!--Fin Cabecera-->
 <!--Contenedor-->
 <div class="contacto-container">
-  <form>
+  <form [formGroup]="formularioContacto" (ngSubmit)="enviarFormulario()">
     <div class="form-group">
-      <label for="name">Nombre:</label>
+      <label for="name">Nombre de usuario:</label>
       <input
         id="name"
         type="text"
         class="form-control"
-        placeholder="Ingrese su nombre"
+        placeholder="Introduzca su nombre de usuario"
+        [value]="usuario"
+        readonly
       />
-      <div class="error" style="display: none">El nombre es obligatorio.</div>
     </div>
-
+  
     <div class="form-group">
       <label for="email">Correo Electrónico:</label>
       <input
@@ -38,19 +39,19 @@
         type="email"
         class="form-control"
         placeholder="Ingrese su correo electrónico"
+        formControlName="correo"
       />
-      <div class="error" style="display: none">Ingrese un correo válido.</div>
     </div>
-
+  
     <div class="form-group">
       <label for="reason">Razón del contacto:</label>
-      <select id="reason" class="form-control">
+      <select id="reason" class="form-control" formControlName="razon">
         <option value="consulta">Consulta general</option>
         <option value="sugerencia">Sugerencia</option>
         <option value="queja">Queja</option>
       </select>
     </div>
-
+  
     <div class="form-group">
       <label for="phone">Teléfono:</label>
       <input
@@ -58,9 +59,10 @@
         type="tel"
         class="form-control"
         placeholder="Ingrese su número de teléfono"
+        formControlName="telefono"
       />
     </div>
-
+  
     <div class="form-group">
       <label for="message">Mensaje:</label>
       <textarea
@@ -68,10 +70,10 @@
         class="form-control"
         rows="5"
         placeholder="Escriba su mensaje"
+        formControlName="mensaje"
       ></textarea>
-      <div class="error" style="display: none">El mensaje es obligatorio.</div>
     </div>
-
+  
     <button type="submit" class="btn btn-primary">Enviar</button>
   </form>
 </div>
